--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
       - REDIS_URL=redis://redis:6379
       - SECRET_KEY=change-this-secret-key-in-production-min-32-chars
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
       - ./backend:/app
       - ./data:/data
